Setup GitHub Pages deployment

--- a/windsurf_deployment.yaml
+++ b/windsurf_deployment.yaml
@@ -3,4 +3,4 @@
 # The ID of the project (different from project name) on the provider's system. This is populated as a way to update existing deployments.
 project_id: a5f63af8-6066-47f7-8688-5ef9994f2f28
 # The framework of the web application (examples: nextjs, react, vue, etc.)
-framework: nextjs
+framework: vite
